chore: Django deploy test

--- a/web/stock_data_flow/analyticshub/templates/analyticshub/index.html
+++ b/web/stock_data_flow/analyticshub/templates/analyticshub/index.html
@@ -11,5 +11,6 @@
 <body>
   <h2 id="clock">00:00:00</h2>
   <script src="{% static 'analyticshub/js/clock.js' %}"></script>
+  <span>deploy test</span>
 </body>
 </html>
