--- a/web/stock_data_flow/homepage/templates/homepage/index.html
+++ b/web/stock_data_flow/homepage/templates/homepage/index.html
@@ -5,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   {% load static %}
-  <link rel="stylesheet" href="{% static 'analyticshub/css/style.css' %}" />
+  <link rel="stylesheet" href="{% static 'homepage/css/style.css' %}" />
   <title>StockSight</title>
 </head>
 <body>
   <h2 id="clock">00:00:00</h2>
-  <script src="{% static 'analyticshub/js/clock.js' %}"></script>
+  <script src="{% static 'homepage/js/clock.js' %}"></script>
   <span>deploy test</span>
 </body>
 </html>
