--- a/web/stock_data_flow/superset/templates/superset/ml.html
+++ b/web/stock_data_flow/superset/templates/superset/ml.html
@@ -9,8 +9,11 @@
   <title>StockSight</title>
 </head>
 <body>
-  <h2 id="clock">00:00:00</h2>
+  {% include 'common/menu_bar.html' %}
+  <div class="content">
+    <h2 id="clock">00:00:00</h2>
+    <span>ml page</span>
+  </div>
   <script src="{% static 'superset/js/clock.js' %}"></script>
-  <span>ml page</span>
 </body>
 </html>
