--- a/web/stock_data_flow/viz/static/viz/css/style.css
+++ b/web/stock_data_flow/viz/static/viz/css/style.css
@@ -3,9 +3,16 @@ body {
     margin: 0;
     display: flex;
     justify-content: center;
+    flex-direction: row;
     align-items: center;
     flex-wrap: nowrap;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    flex-direction: column;
   }
+
+.content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 200px;
+}
