--- a/web/stock_data_flow/viz/templates/viz/graph.html
+++ b/web/stock_data_flow/viz/templates/viz/graph.html
@@ -9,8 +9,11 @@
   <title>StockSight</title>
 </head>
 <body>
-  <h2 id="clock">00:00:00</h2>
+  {% include 'common/menu_bar.html' %}
+  <div class="content">
+    <h2 id="clock">00:00:00</h2>
+    <span>graph page</span>
+  </div>
   <script src="{% static 'viz/js/clock.js' %}"></script>
-  <span>graph page</span>
 </body>
 </html>
