--- a/web/stock_data_flow/superset/static/superset/css/style.css
+++ b/web/stock_data_flow/superset/static/superset/css/style.css
@@ -2,9 +2,7 @@ body {
   height: 100vh;
   margin: 0;
   display: flex;
-  justify-content: center;
   flex-direction: row;
-  align-items: center;
   flex-wrap: nowrap;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -12,11 +10,28 @@ body {
 
 .content {
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  padding-left: 200px;
+  margin-left: 260px;
+  margin-top: 20px;
+  width: calc(100% - 280px);
+  border: 1px dashed gray;
 }
 
-.test {
-  font-style: italic ;
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+#clock {
+  margin-top: 30px;
+  border: 1px dashed gray;
+}
+
+.board {
+  border: 1px dashed rgb(103, 199, 103);
+}
+
+iframe {
+  width: calc(100%);
 }
