fix: Modify css for mobile env

--- a/web/stock_data_flow/superset/templates/superset/treemap.html
+++ b/web/stock_data_flow/superset/templates/superset/treemap.html
@@ -16,7 +16,7 @@
       <h3 id="clock">00:00:00</h3>
     </header>
     <div class="board">
-      <iframe src="http://YOUR_SUPERSET_DASHBOARD_URL"></iframe>
+      <iframe src="http://de-4-3-alb-358204701.ap-northeast-2.elb.amazonaws.com:8088/superset/dashboard/p/Vna4xpRgA3X/"></iframe>
     </div>
   </div>
   <script src="{% static 'superset/js/clock.js' %}"></script>
