--- a/web/stock_data_flow/viz/static/viz/css/style.css
+++ b/web/stock_data_flow/viz/static/viz/css/style.css
@@ -12,9 +12,21 @@ body {
   display: flex;
   flex-direction: column;
   margin-left: 260px;
+  margin-right: 20px;
   margin-top: 20px;
-  width: calc(100% - 280px);
+  width: calc(100% - 260px);
   border: 1px dashed gray;
+}
+
+/* 화면 너비가 768px 이하일 때 */
+@media (max-width: 768px) {
+  .content {
+    width: 768px; /* 좁은 화면에서도 고정 너비 유지 */
+  }
+
+  body {
+    overflow-x: scroll; /* 내용이 너비를 초과하면 수평 스크롤 허용 */
+  }
 }
 
 header {
