--- a/web/stock_data_flow/superset/static/superset/css/style.css
+++ b/web/stock_data_flow/superset/static/superset/css/style.css
@@ -22,9 +22,10 @@ body {
 @media (max-width: 768px) {
 
   body {
-    overflow-x: scroll; /* 내용이 너비를 초과하면 수평 스크롤 허용 */
+    overflow-x: auto;
+    min-width: 768px;
   }
-
+  
   .content {
     width: 768px; /* 좁은 화면에서도 고정 너비 유지 */
   }
