--- a/web/stock_data_flow/common/templates/common/menu_bar.html
+++ b/web/stock_data_flow/common/templates/common/menu_bar.html
@@ -20,6 +20,7 @@
       <a href="{% url 'calc_page' %}" class="{% if request.resolver_match.url_name == 'calc_page' %}active{% endif %} menu">Calc 페이지</a>
       <a href="{% url 'graph_page' %}" class="{% if request.resolver_match.url_name == 'graph_page' %}active{% endif %} menu">Graph 페이지</a>
     </div>
+    <div class="sizedbox"></div>
   </div>
 </body>
 </html>
