--- a/web/stock_data_flow/superset/static/superset/css/style.css
+++ b/web/stock_data_flow/superset/static/superset/css/style.css
@@ -2,43 +2,44 @@ body {
   height: 100vh;
   margin: 0;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: nowrap;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  overflow-y: auto; 
 }
 
 .content {
   display: flex;
   flex-direction: column;
-  margin-left: 260px;
-  margin-right: 20px;
-  margin-top: 20px;
-  width: calc(100% - 260px);
+  margin-left: 18vw;
+  margin-right: 1vw;
+  margin-top: 1vw;
+  width: 81vw;
   border: 1px dashed gray;
-}
-
-/* 화면 너비가 768px 이하일 때 */
-@media (max-width: 768px) {
-
-  body {
-    overflow-x: auto;
-    min-width: 768px;
-  }
-  
-  .content {
-    width: 768px; /* 좁은 화면에서도 고정 너비 유지 */
-  }
 }
 
 header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  height: 5vw;
+}
+
+h1 {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px dashed gray;
+  height: 5vw
 }
 
 #clock {
-  margin-top: 30px;
+  margin-top: 2vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border: 1px dashed gray;
 }
 
