fix: Modify css for mobile env

--- a/web/stock_data_flow/superset/templates/superset/ml.html
+++ b/web/stock_data_flow/superset/templates/superset/ml.html
@@ -12,8 +12,8 @@
   {% include 'common/menu_bar.html' %}
   <div class="content">
     <header>
-      <h1>Top 5 ML</h1>
-      <h3 id="clock">00:00:00</h3>
+      <span id="page_name">Top 5 ML</span>
+      <span id="clock">00:00:00</span>
     </header>
     <div class="board">
       <iframe src="http://YOUR_SUPERSET_DASHBOARD_URL"></iframe>
