--- a/web/stock_data_flow/superset/templates/superset/treemap.html
+++ b/web/stock_data_flow/superset/templates/superset/treemap.html
@@ -12,8 +12,8 @@
   {% include 'common/menu_bar.html' %}
   <div class="content">
     <header>
-      <h1>Sectoral Key Stock Treemap</h1>
-      <h3 id="clock">00:00:00</h3>
+      <span id="page_name">Sectoral Key Stock Treemap</span>
+      <span id="clock">00:00:00</span>
     </header>
     <div class="board">
       <iframe src="http://de-4-3-alb-358204701.ap-northeast-2.elb.amazonaws.com:8088/superset/dashboard/p/Vna4xpRgA3X/"></iframe>
