--- a/web/stock_data_flow/viz/templates/viz/graph.html
+++ b/web/stock_data_flow/viz/templates/viz/graph.html
@@ -12,8 +12,8 @@
   {% include 'common/menu_bar.html' %}
   <div class="content">
     <header>
-      <h1>Moving_Everage</h1>
-      <h3 id="clock">00:00:00</h3>
+      <span id="page_name">Moving_Everage</span>
+      <span id="clock">00:00:00</span>
     </header>
     <div class="board">
     </div>
