--- a/web/stock_data_flow/common/static/common/css/style.css
+++ b/web/stock_data_flow/common/static/common/css/style.css
@@ -42,12 +42,12 @@
 .menu_bar a.menu {
     margin: 1vw 1vw;
     padding: 1vw 1vw; /* 패딩을 늘려 높이 증가 */
-    font-size: 1em;
+    font-size: 1.3vw;
 }
 
 /* 제목의 스타일 변경 */
 .menu_bar a.title {
-    font-size: 2em; /* 글자 크기 증가 */
+    font-size: 2.3vw; /* 글자 크기 증가 */
     font-weight: bold; /* 굵은 글씨 */
     margin-top: 1vw;
     padding: 1vw 2vw;
@@ -57,6 +57,7 @@
 .menu_bar a.about {
     margin-bottom: 1vw; 
     padding: 0 2vw;
+    font-size: 1vw;
 }
 
 .inner_box {
