--- a/web/stock_data_flow/homepage/static/homepage/css/style.css
+++ b/web/stock_data_flow/homepage/static/homepage/css/style.css
@@ -1,11 +1,88 @@
 body {
+    background-image: linear-gradient(125deg, #5d007b, #9900cc);
     height: 100vh;
     margin: 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
     flex-wrap: nowrap;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
       Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-    flex-direction: column;
-  }
+    color: white;
+    position: relative; 
+}
+
+#left_box {
+  height: 100vh;
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  z-index: 1;
+}
+
+#right_box {
+  height: 100vh;
+  width: 50vw;
+  margin-left: 49vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute; 
+  z-index: 2;
+}
+
+#title {
+  margin-top: 10vh;
+  padding-left: 7.5vw;
+  padding-top: 10vh;
+  height: 30vh;
+  font-size: 8vw; 
+  font-weight: bold; 
+}
+
+#etc {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 10vh;
+  padding-left:7.5vw;
+}
+
+#etc a{
+  color: white;
+  font-size: 1.5vw;
+  text-decoration: none;
+  margin-right: 25vw;
+}
+
+.menu_bar {
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding-right: 1vw;
+}
+
+.menu_bar a {
+  color: white;
+  padding: 10px 15px;
+  text-decoration: none;
+  border-radius: 5px; 
+  font-size: 3.8vw;
+  font-weight: bold;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.no1 {
+  margin-left: 25vw;
+}
+
+.no2 {
+  margin-left: 12vw;
+}
+
+.no3 {
+  margin-left: 4vw;
+}
