--- a/web/stock_data_flow/homepage/templates/homepage/index.html
+++ b/web/stock_data_flow/homepage/templates/homepage/index.html
@@ -9,13 +9,20 @@
   <title>StockSight</title>
 </head>
 <body>
-  <h1>StockSight</h1>
-  <h3 id="clock">00:00:00</h3>
-  <div class="menu_bar">
-    <a href="{% url 'ml_page' %}"><button>ML 페이지</button></a>
-    <a href="{% url 'treemap_page' %}"><button>Treemap 페이지</button></a>
-    <a href="{% url 'calc_page' %}"><button>Calc 페이지</button></a>
-    <a href="{% url 'graph_page' %}"><button>Graph 페이지</button></a>
+  <div id="left_box">
+    <span id="title">StockSight</span>
+    <div id="etc">
+      <h3 id="clock">00:00:00</h3>
+      <a href="{% url 'calc_page' %}">Project Report</a>
+    </div>
+  </div>
+  <div id="right_box">
+    <div class="menu_bar">
+      <a href="{% url 'calc_page' %}" class="no1">수익률 계산</a>
+      <a href="{% url 'graph_page' %}" class="no2">장단기 이동평균선</a>
+      <a href="{% url 'treemap_page' %}" class="no3">주요 종목 실시간 트리맵</a>
+      <a href="{% url 'ml_page' %}" class="no4">ML 상승률 TOP5 종목 예측</a>
+    </div>
   </div>
   <script src="{% static 'homepage/js/clock.js' %}"></script>
 </body>
