--- a/web/stock_data_flow/superset/templates/superset/treemap.html
+++ b/web/stock_data_flow/superset/templates/superset/treemap.html
@@ -16,7 +16,7 @@
       <span id="clock">00:00:00</span>
     </header>
     <div class="board">
-      <iframe src="http://de-4-3-alb-358204701.ap-northeast-2.elb.amazonaws.com:8088/superset/dashboard/p/Vna4xpRgA3X/"></iframe>
+      <script type='module' src='https://prod-apnortheast-a.online.tableau.com/javascripts/api/tableau.embedding.3.latest.min.js'></script><tableau-viz id='tableau-viz' src='https://prod-apnortheast-a.online.tableau.com/t/toutelajourn6ea3f4ad53e3/views/stock_dashboard/Sheet1/4a51bb1e-08a5-4cab-8557-fa595a9beebf/32635e98-22c1-46b1-baf9-40d96f616dd2' width='1728' height='918' hide-tabs toolbar='bottom' ></tableau-viz>
     </div>
   </div>
   <script src="{% static 'superset/js/clock.js' %}"></script>
