--- a/web/stock_data_flow/viz/templates/viz/graph.html
+++ b/web/stock_data_flow/viz/templates/viz/graph.html
@@ -28,10 +28,19 @@
           <option value="">먼저 섹터를 선택하세요</option>
         </select>
       </div>
+      <div id="select_period">
+        <span id="period_comment">기간 2가지 선택</span>
+        <label><input type="checkbox" name="moving-average" value="5">5일</label><br>
+        <label><input type="checkbox" name="moving-average" value="10">10일</label><br>
+        <label><input type="checkbox" name="moving-average" value="20">20일</label><br>
+        <label><input type="checkbox" name="moving-average" value="30">30일</label><br>
+        <label><input type="checkbox" name="moving-average" value="50">50일</label><br>
+      </div>
       <canvas id="myChart"></canvas>
     </div>
   </div>
   <script src="{% static 'viz/js/get_stock.js' %}"></script>
+  <script src="{% static 'viz/js/get_period.js' %}"></script>
   <script src="{% static 'viz/js/clock.js' %}"></script>
 </body>
 </html>
