--- a/web/stock_data_flow/viz/templates/viz/graph.html
+++ b/web/stock_data_flow/viz/templates/viz/graph.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>StockSight</title>
   {% load static %}
   <link rel="stylesheet" href="{% static 'viz/css/style.css' %}" />
-  <title>StockSight</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
 </head>
 <body>
   {% include 'common/menu_bar.html' %}
@@ -25,7 +26,7 @@
           {% endfor %}
         </select>
         <select id="stock-select">
-          <option value="">먼저 섹터를 선택하세요</option>
+          <option value="">종목 선택</option>
         </select>
       </div>
       <div id="select_period">
@@ -36,11 +37,13 @@
         <label><input type="checkbox" name="moving-average" value="30">30일</label><br>
         <label><input type="checkbox" name="moving-average" value="50">50일</label><br>
       </div>
-      <canvas id="myChart"></canvas>
+      <div id="chart_box">
+        <canvas id="myChart"></canvas>
+      </div>
     </div>
   </div>
-  <script src="{% static 'viz/js/get_stock.js' %}"></script>
-  <script src="{% static 'viz/js/get_period.js' %}"></script>
+  <script src="{% static 'viz/js/graph.js' %}"></script>
+  <script src="{% static 'viz/js/get_choices.js' %}"></script>
   <script src="{% static 'viz/js/clock.js' %}"></script>
 </body>
 </html>
