--- a/web/stock_data_flow/homepage/templates/homepage/index.html
+++ b/web/stock_data_flow/homepage/templates/homepage/index.html
@@ -7,6 +7,8 @@
   {% load static %}
   <link rel="stylesheet" href="{% static 'homepage/css/style.css' %}" />
   <title>StockSight</title>
+  <link rel="shortcut icon" href="{% static 'common/img/favicon_pur.ico' %}" type="image/x-icon">
+  <link rel="icon" href="{% static 'common/img/favicon_pur.ico' %}" type="image/x-icon">
 </head>
 <body>
   <div id="left_box">
