--- a/web/stock_data_flow/viz/templates/viz/calc.html
+++ b/web/stock_data_flow/viz/templates/viz/calc.html
@@ -7,6 +7,8 @@
   {% load static %}
   <link rel="stylesheet" href="{% static 'viz/css/style.css' %}" />
   <title>StockSight</title>
+  <link rel="shortcut icon" href="{% static 'common/img/favicon_pur.ico' %}" type="image/x-icon">
+  <link rel="icon" href="{% static 'common/img/favicon_pur.ico' %}" type="image/x-icon">
 </head>
 <body>
   {% include 'common/menu_bar.html' %}
