fix: Modify dag integrity test code

--- a/web/stock_data_flow/homepage/templates/homepage/index.html
+++ b/web/stock_data_flow/homepage/templates/homepage/index.html
@@ -15,7 +15,7 @@
     <span id="title">StockSight</span>
     <div id="etc">
       <h3 id="clock">00:00:00</h3>
-      <a href="{% url 'calc_page' %}">Project Report</a>
+      <a href="https://autumn-windscreen-3f2.notion.site/Project-Report-0eac3062c1af42bd94c22285214bd75d">Project Report</a>
     </div>
   </div>
   <div id="right_box">
