--- a/web/stock_data_flow/superset/static/superset/css/style.css
+++ b/web/stock_data_flow/superset/static/superset/css/style.css
@@ -59,8 +59,10 @@ header {
 
 .board {
   border: 1px dashed rgb(103, 199, 103);
+  height: 220vh;
 }
 
 iframe {
-  width: calc(100%);
+  width: 100%;
+  height: 100%;
 }
