add : ML chart added

--- a/web/stock_data_flow/superset/templates/superset/ml.html
+++ b/web/stock_data_flow/superset/templates/superset/ml.html
@@ -18,7 +18,7 @@
       <span id="clock">00:00:00</span>
     </header>
     <div class="board">
-      <iframe src="http://YOUR_SUPERSET_DASHBOARD_URL"></iframe>
+      <iframe id="ix_iframe" src="http://de-4-3-alb-358204701.ap-northeast-2.elb.amazonaws.com:8088/superset/dashboard/de-4-3-top5?standalone=true" height="100vh" />
     </div>
   </div>
   <script src="{% static 'superset/js/clock.js' %}"></script>
