--- a/web/stock_data_flow/viz/templates/viz/graph.html
+++ b/web/stock_data_flow/viz/templates/viz/graph.html
@@ -70,19 +70,19 @@
           <div class="sig_bar"></div>
         </div>
         <div class="sig">
-          <span class="sig_content mv" data-ma="5">5일 이동평균선 위</span>
+          <span class="sig_content mv" data-ma="5">현재 종가: 5일선 아래</span>
           <div class="sig_bar" data-ma-bar="5"></div>
         </div>
         <div class="sig">
-          <span class="sig_content mv" data-ma="20">20일 이동평균선 아래</span>
+          <span class="sig_content mv" data-ma="20">현재 종가: 20일선 아래</span>
           <div class="sig_bar" data-ma-bar="20"></div>
         </div>
         <div class="sig">
-          <span class="sig_content gc">골든크로스 발생</span>
+          <span class="sig_content gc">1주 이내 골든크로스</span>
           <div class="sig_bar"></div>
         </div>
         <div class="sig">
-          <span class="sig_content dc">데드크로스 발생</span>
+          <span class="sig_content dc">1주 이내 데드크로스</span>
           <div class="sig_bar"></div>
         </div>
       </div>
