--- a/web/stock_data_flow/superset/templates/superset/treemap.html
+++ b/web/stock_data_flow/superset/templates/superset/treemap.html
@@ -13,12 +13,8 @@
 <body>
   {% include 'common/menu_bar.html' %}
   <div class="content">
-    <header>
-      <span id="page_name">Sectoral Key Stock Treemap</span>
-      <span id="clock">00:00:00</span>
-    </header>
     <div class="board">
-      <iframe id="ix_iframe" src="http://de-4-3-alb-358204701.ap-northeast-2.elb.amazonaws.com:8088/superset/dashboard/de-4-3-treemap?standalone=true" height="100vh" />
+      <iframe id="ix_iframe" src="http://de-4-3-alb-358204701.ap-northeast-2.elb.amazonaws.com:8088/superset/dashboard/de-4-3-treemap?standalone=true" />
     </div>
   </div>
   <script src="{% static 'superset/js/clock.js' %}"></script>
