--- a/web/stock_data_flow/viz/templates/viz/calc.html
+++ b/web/stock_data_flow/viz/templates/viz/calc.html
@@ -9,12 +9,15 @@
   <title>StockSight</title>
   <link rel="shortcut icon" href="{% static 'common/img/favicon_pur.ico' %}" type="image/x-icon">
   <link rel="icon" href="{% static 'common/img/favicon_pur.ico' %}" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
   {% include 'common/menu_bar.html' %}
   <div class="content">
     <header>
-      <span id="page_name">Profit and Loss Calculation</span>
+      <span id="page_name">수익률 계산</span>
       <span id="clock">00:00:00</span>
     </header>
     <div class="board">
