--- a/web/stock_data_flow/viz/templates/viz/graph.html
+++ b/web/stock_data_flow/viz/templates/viz/graph.html
@@ -11,6 +11,9 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
   <link rel="shortcut icon" href="{% static 'common/img/favicon_pur.ico' %}" type="image/x-icon">
   <link rel="icon" href="{% static 'common/img/favicon_pur.ico' %}" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
   {% include 'common/menu_bar.html' %}
