--- a/web/stock_data_flow/common/templates/common/menu_bar.html
+++ b/web/stock_data_flow/common/templates/common/menu_bar.html
@@ -7,18 +7,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="{% static 'common/css/style.css' %}">
   <title>StockSight</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- HTML 템플릿 -->
   <div class="menu_bar">
-    <a href="{% url 'home_page' %}" class="title">StockSight</a>
-    <a href="" class="about">about us</a>
+    <div id="title_box">
+      <a href="{% url 'home_page' %}" class="title">StockSight</a>
+    </div>
+    <a href="https://autumn-windscreen-3f2.notion.site/Project-Report-0eac3062c1af42bd94c22285214bd75d" class="about">about us</a>
     <div class="divider"></div>
     <div class="inner_box">
-      <a href="{% url 'treemap_page' %}" class="{% if request.resolver_match.url_name == 'treemap_page' %}active{% endif %} menu">Treemap 페이지</a>
-      <a href="{% url 'ml_page' %}" class="{% if request.resolver_match.url_name == 'ml_page' %}active{% endif %} menu">ML 페이지</a>
-      <a href="{% url 'calc_page' %}" class="{% if request.resolver_match.url_name == 'calc_page' %}active{% endif %} menu">Calc 페이지</a>
-      <a href="{% url 'graph_page' %}" class="{% if request.resolver_match.url_name == 'graph_page' %}active{% endif %} menu">Graph 페이지</a>
+      <a href="{% url 'calc_page' %}" class="{% if request.resolver_match.url_name == 'calc_page' %}active{% endif %} menu">수익률 계산</a>
+      <a href="{% url 'treemap_page' %}" class="{% if request.resolver_match.url_name == 'treemap_page' %}active{% endif %} menu">실시간 트리맵</a>
+      <a href="{% url 'graph_page' %}" class="{% if request.resolver_match.url_name == 'graph_page' %}active{% endif %} menu">장단기 이동평균선</a>
+      <a href="{% url 'ml_page' %}" class="{% if request.resolver_match.url_name == 'ml_page' %}active{% endif %} menu">ML 주가 예측</a>
     </div>
     <div class="sizedbox"></div>
   </div>
