--- a/web/stock_data_flow/homepage/static/homepage/css/style.css
+++ b/web/stock_data_flow/homepage/static/homepage/css/style.css
@@ -13,11 +13,12 @@ body {
 
 #left_box {
   height: 100vh;
-  width: 50vw;
+  width: 55vw;
   display: flex;
   flex-direction: column;
   position: absolute;
   z-index: 1;
+  justify-content: space-between;
 }
 
 #right_box {
@@ -28,30 +29,49 @@ body {
   flex-direction: column;
   position: absolute; 
   z-index: 2;
+  align-items: end;
 }
 
 #title {
-  margin-top: 10vh;
+  padding-top: 20vh;
   padding-left: 7.5vw;
-  padding-top: 10vh;
   height: 30vh;
   font-size: 8vw; 
-  font-weight: bold; 
+  font-weight: bold;
+  padding-bottom: 0;
 }
 
 #etc {
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 50vh;
+}
+
+#etc_1 {
+  display: flex;
   flex-direction: column;
-  justify-content: center;
-  margin-top: 10vh;
-  padding-left:7.5vw;
+  width: 25vw;
+  padding-left: 7.5vw;
+  padding-top: 10vh;
 }
 
 #etc a{
   color: white;
   font-size: 1.5vw;
   text-decoration: none;
-  margin-right: 25vw;
+}
+
+#etc_2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  align-items: end;
+}
+
+img {
+  width: 25vw;
+  margin-right: 5vw;
 }
 
 .menu_bar {
@@ -61,6 +81,7 @@ body {
   justify-content: space-evenly;
   margin-top: 15vh;
   padding-right: 1vw;
+  width: 37vw;
 }
 
 .menu_bar a {
@@ -73,17 +94,5 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  border: 1px dashed gray;
-}
-
-.no1 {
-  margin-left: 25vw;
-}
-
-.no2 {
-  margin-left: 15vw;
-}
-
-.no3 {
-  margin-left: 6vw;
+  font-family: "Noto Sans KR", sans-serif;
 }
