add: Add calculation part

--- a/web/stock_data_flow/viz/static/viz/css/style.css
+++ b/web/stock_data_flow/viz/static/viz/css/style.css
@@ -197,3 +197,39 @@ input[type="checkbox"] {
 .sized_box {
   height: 1.5vw;
 }
+
+.grid-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px; /* 박스 사이의 간격 */
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr); /* 가로로 5개의 열 생성 */
+  gap: 10px; /* 그리드 아이템 사이의 간격 */
+}
+
+.grid-item {
+  border: 1px solid lightgrey; /* 옅은 회색 선 */
+  padding: 10px; /* 내부 여백 */
+}
+
+/* 반응형 디자인을 위한 미디어 쿼리, 화면 크기에 따라 열 개수 조정 */
+@media (max-width: 1024px) {
+  .grid {
+    grid-template-columns: repeat(3, 1fr); /* 가로로 3개의 열 생성 */
+  }
+}
+
+@media (max-width: 768px) {
+  .grid {
+    grid-template-columns: repeat(2, 1fr); /* 가로로 2개의 열 생성 */
+  }
+}
+
+@media (max-width: 480px) {
+  .grid {
+    grid-template-columns: 1fr; /* 모바일 기기에는 한 줄에 하나의 열만 표시 */
+  }
+}
